--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,11 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.facebook.fresco:fresco:1.11.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:exifinterface:28.0.0'
+
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.mikepenz:aboutlibraries:6.1.1"
 }
